--- a/LeakTest.csproj
+++ b/LeakTest.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<RootNamespace>NNN1590.LeakTest</RootNamespace>
 	</PropertyGroup>
 
